--- a/index.html
+++ b/index.html
@@ -22,12 +22,15 @@
 
 		.button-row{
 			margin-top: 200px;
+		}
+
+		.center{
 			text-align: center;
 		}
 	</style>
 </head>
 <body>
-	<div class="button-row">
+	<div class="button-row center">
 		<div id="C4" class="circle button" style="background-color: #D93046;"></div>
 		<div id="D4" class="circle button" style="background-color: #4ECDC4;"></div>
 		<div id="E4" class="circle button" style="background-color: #FFFF00;"></div>
@@ -36,6 +39,11 @@
 		<div id="A4" class="circle button" style="background-color: #C4EAFD;"></div>
 		<div id="B4" class="circle button" style="background-color: #E2E002;"></div>
 		<div id="C5" class="circle button" style="background-color: #D93046;"></div>
+	</div>
+	<div class="center">
+		<div id="Play">Play</div>
+		<div id="Stop">Stop</div>
+		<div id="Record">Record</div>
 	</div>
 	<script type="text/javascript">
 		var audioCtx = new (window.AudioContext || windows.webkitAudioContext)();
@@ -50,7 +58,7 @@
 			var A4 = createAudio(audioCtx, 'Piano.ff.A4.mp3');
 			var B4 = createAudio(audioCtx, 'Piano.ff.B4.mp3');
 			var C5 = createAudio(audioCtx, 'Piano.ff.C5.mp3');
-		
+
 			C4.decodeAudioData()
 			.then(D4.decodeAudioData())
 			.then(E4.decodeAudioData())
@@ -60,14 +68,22 @@
 			.then(B4.decodeAudioData())
 			.then(C5.decodeAudioData());
 
-			bindInput(document.getElementById('C4'), 'a', C4);
-			bindInput(document.getElementById('D4'), 's', D4);
-			bindInput(document.getElementById('E4'), 'd', E4);
-			bindInput(document.getElementById('F4'), 'f', F4);
-			bindInput(document.getElementById('G4'), 'j', G4);
-			bindInput(document.getElementById('A4'), 'k', A4);
-			bindInput(document.getElementById('B4'), 'l', B4);
-			bindInput(document.getElementById('C5'), ';', C5);
+			var track = Track();
+			document.getElementById('Play').addEventListener('touchstart', track.play);
+			document.getElementById('Play').addEventListener('mousedown', track.play);
+			document.getElementById('Stop').addEventListener('touchstart', track.stop);
+			document.getElementById('Stop').addEventListener('mousedown', track.stop);
+			document.getElementById('Record').addEventListener('touchstart', track.record);
+			document.getElementById('Record').addEventListener('mousedown', track.record);
+
+			bindAudioInput(document.getElementById('C4'), 'a', C4, track.add);
+			bindAudioInput(document.getElementById('D4'), 's', D4, track.add);
+			bindAudioInput(document.getElementById('E4'), 'd', E4, track.add);
+			bindAudioInput(document.getElementById('F4'), 'f', F4, track.add);
+			bindAudioInput(document.getElementById('G4'), 'j', G4, track.add);
+			bindAudioInput(document.getElementById('A4'), 'k', A4, track.add);
+			bindAudioInput(document.getElementById('B4'), 'l', B4, track.add);
+			bindAudioInput(document.getElementById('C5'), ';', C5, track.add);
 		}
 	</script>
 </body>
